# mcp

./: .gitignore  README.md  downloads_organizer.py  main.py  mcp.example.json  pyproject.toml  requirements.txt  settings.py  software.py
models/: __init__.py  cmd_result.py  result.py  software_models.py
services/: __init__.py  software_service.py
tests/: __init__.py  test_models.py  test_software_service.py  test_utils.py
utils/: __init__.py  errors.py  paths.py  validate.py
